--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "dependencies": {
     "es6-set": "^0.1.1",
     "pbf": "^1.3.2",
-    "tiletype": "^0.2.1",
-    "vector-tile": "^1.1.3"
+    "@mapbox/tiletype": "^0.3.1",
+    "@mapbox/vector-tile": "^4.2.0"
   }
 }
