--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
     "es6-set": "^0.1.1",
     "pbf": "^1.3.2",
     "@mapbox/tiletype": "^0.3.1",
-    "@mapbox/vector-tile": "^4.2.0"
+    "@mapbox/vector-tile": "git+https://git@github.com/jrontend/tilelive-vector.git"
   }
 }
